<resources>
    <string name="app_name">App3</string>
    <string name="box1">green</string>
    <string name="box2">red</string>
    <string name="box3">yellow</string>
    <string name="box4">Blue</string>
    <string name="placeholder">"Enter your name "</string>
    <string name="calculator">0</string>
    <string name="clear">C</string>
    <string name="plusminus">+/-</string>
    <string name="mode">%</string>
    <string name="divide">/</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
    <string name="multi">X</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="dot">.</string>
</resources>