<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/views"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0C0C0C"
        android:backgroundTint="#000000">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#F4F4F4"
            android:backgroundTintMode="src_over"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:padding="0dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/C"
                style="@style/upper_button"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey"
                android:text="@string/clear" />

            <Button
                android:id="@+id/operator1"
                style="@style/upper_button"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey"
                android:text="@string/plusminus" />

            <Button
                android:id="@+id/mode"
                style="@style/upper_button"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey"
                android:text="@string/mode" />

            <Button
                android:id="@+id/divide"
                style="@style/upper_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/divide" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/seven"
                    style="@style/LowerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:inputType="number|numberSigned"
                    android:text="7" />

                <Button
                    android:id="@+id/four"
                    style="@style/LowerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:text="@string/four" />

                <Button
                    android:id="@+id/one"
                    style="@style/LowerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:text="@string/one" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical">

                <Button
                    android:id="@+id/eight"
                    style="@style/LowerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:text="@string/eight" />

                <Button
                    android:id="@+id/five"
                    style="@style/LowerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:text="@string/five" />

                <Button
                    android:id="@+id/two"
                    style="@style/LowerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:text="@string/two" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/nine"
                    style="@style/LowerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:text="@string/nine" />

                <Button
                    android:id="@+id/six"
                    style="@style/LowerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:text="@string/six" />

                <Button
                    android:id="@+id/three"
                    style="@style/LowerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:text="@string/three" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/multiply"
                    style="@style/LowerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/yellow"
                    android:text="@string/multi"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/minus"
                    style="@style/LowerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/yellow"
                    android:text="@string/minus"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/plus"
                    style="@style/LowerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/yellow"
                    android:text="@string/plus"
                    android:textColor="@color/black" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="52dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/zero"
                style="@style/BottomStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#090909"
                android:text="@string/zero"
                android:textColor="#EFEAEA" />

            <Button
                android:id="@+id/dot"
                style="@style/BottomStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#F4B6B6"
                android:text="@string/dot"
                android:textColor="#000000" />

            <Button
                android:id="@+id/equal"
                style="@style/BottomStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/green"
                android:text="@string/equal"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:elegantTextHeight="true"
            android:freezesText="false"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showNumber"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/showNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="192dp"
            android:inputType="number|numberDecimal|numberSigned"
            android:padding="10dp"
            android:phoneNumber="true"
            android:text="@string/calculator"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>